--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -285,7 +285,9 @@
 </script>
 {%- block footer_wrapper %}
   <div class="footer">
-    {{ copyright }} Documentation created using <a href="http://sphinx.pocoo.org/">Sphinx</a>.
+    {{ copyright }}
+    <br>
+    Documentation created using <a href="http://sphinx.pocoo.org/">Sphinx</a>.
   </div>
 {%- endblock %}
 {%- endblock %}
