--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -63,7 +63,8 @@
            Ad: ["\\text{Ad}",0],
            Var: ["\\text{Var}",0],
            bx: ["\\mathbf{x}", 0],
-           bm: ["\\boldsymbol{\#1}",1]
+           bm: ["\\boldsymbol{\#1}",1],
+           {{ theme_latex_macros }}
          }
        }
      });
