Reduce XL gap between `<h1>` and `<h2>` text

--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -218,9 +218,8 @@
       }
     });
 
-    console.log("Before...", document.querySelectorAll(".document > .section"));
     $(".document > .section").removeClass("section");
-    console.log("After...", document.querySelectorAll(".document > .section"))
+    $("h1 ~ .section").removeClass("section");
     $(".comment-container .nano-content").css("height", $("#content").height());
     $(".comment-container").css("height", $("#content").height());
     $(".nano").nanoScroller();
