Add support for additional copyright notices, such as for TensorFlow

--- a/xanadu_sphinx_theme/footer.html
+++ b/xanadu_sphinx_theme/footer.html
@@ -76,6 +76,11 @@
   <div class="footer-copyright py-3 mt-0 text-center">
       <div class="container-fluid">
         Copyright © 2022 Xanadu Quantum Technologies
+
+        {% for copyright in theme_extra_copyrights %}
+          <br>
+          {{ copyright }}
+        {% endfor %}
       </div>
   </div>
 </footer>
