Remove blank 'Contents' local ToC

--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -1,19 +1,11 @@
+{% if (pagename != "search") and display_toc %}
 <div class="localtoc-container nano has-scrollbar">
   <div class="nano-content">
-    {% if display_toc %}
     <div id="localtoc">
-      <h3>Contents</h3>
-      {% set toctree = toctree(maxdepth=3, collapse=True, includehidden=True) %}
-      {% if display_toc %}
+        <h3>Contents</h3>
         {{ toc | replace("<li>", "<li class='current'>")
                | replace("<ul>", "<ul class='current'>")}}
-      {% else %}
-        <ul style="display: none;">
-          <li><a></a></li>
-        </ul>
-        {{ toctree }}
-      {% endif %}
     </div>
-    {% endif %}
   </div>
 </div>
+{% endif %}
