Revert unintended change to breadcrumb `<div>` role

--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -137,7 +137,7 @@
         <div id="content">
           <div id="right-column">
             {% block breadcrumbs %}
-            <div role="~" aria-label="breadcrumbs navigation">
+            <div role="navigation" aria-label="breadcrumbs navigation">
               <ol class="breadcrumb">
                 <li><a href="{{ pathto(master_doc) }}">Docs</a></li>
                 {% for doc in parents %}
