--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light white sticky-top">
 
   <!-- Logo and Title -->
-  <a class="navbar-brand nav-link" href="{{ pathto('index.html', 1) }}">
+  <a class="navbar-brand nav-link" href="{{ pathto(theme_navbar_home_link, 1) }}">
     <img class="pr-1" src=" {{ pathto(theme_navbar_logo_path, 1) }}" width="28px"></img>
     <h1 id="title">{{ theme_navbar_name }}</h1>
   </a>
