--- a/xanadu_sphinx_theme/globaltoc.html
+++ b/xanadu_sphinx_theme/globaltoc.html
@@ -9,11 +9,6 @@
       </li>
     </ul>
     {% endif %}
-    {% set toctree = toctree(maxdepth=1, collapse=True, includehidden=True) %}
-    {% if toctree %}
-      {{ toctree }}
-    {% else %}
-      {{ toc }}
-    {% endif %}
+    {% toctree = toctree(maxdepth=1, collapse=True, includehidden=True) %}
   </div>
 </div>
