--- a/xanadu_sphinx_theme/globaltoc.html
+++ b/xanadu_sphinx_theme/globaltoc.html
@@ -9,6 +9,6 @@
       </li>
     </ul>
     {% endif %}
-    {% toctree = toctree(maxdepth=1, collapse=True, includehidden=True) %}
+    {{ toctree(maxdepth=1, collapse=True, includehidden=True) }}
   </div>
 </div>
