--- a/xanadu_sphinx_theme/globaltoc.html
+++ b/xanadu_sphinx_theme/globaltoc.html
@@ -1,7 +1,7 @@
 
 <div class="sidebar-block">
   <div class="sidebar-toc">
-    {% if toc_overview %}
+    {% if theme_toc_overview %}
     <p class="caption">{{ theme_project_nav_name or shorttitle }}</p>
     <ul>
       <li class="caption toctree-l1 {{'current' if pagename == 'index' }}">
