--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -2,16 +2,38 @@
 <div class="localtoc-container nano has-scrollbar">
   <div class="nano-content">
     <div id="localtoc">
-        <h3>Contents</h3>
         {% if display_toc %}
+          <h3>Contents</h3>
           <!-- Display the ToC for the current document if it is not empty. -->
           {{ toc | replace("<li>", "<li class='current'>")
                  | replace("<ul>", "<ul class='current'>")}}
         {% else %}
+          <h3>Contents</h3>
           <!-- Display the ToC for a subset of the current document tree. -->
           {{ toctree(maxdepth=3, collapse=True, includehidden=True) }}
         {% endif %}
     </div>
+
+    <div class="xanadu-call-to-action-links">
+        <h3>Downloads</h3>
+        <div id="tutorial-type">{{ pagename }}</div>
+        <div class="download-python-link">
+            <i class="fab fa-python"></i>&nbsp;
+            <div class="call-to-action-desktop-view">Download Python script</div>
+        </div>
+        <div class="download-notebook-link">
+            <i class="fas fa-download"></i>&nbsp;
+            <div class="call-to-action-desktop-view">Download Notebook</div>
+        </div>
+        <div class="github-view-link">
+            <i class="fab fa-github"></i>&nbsp;
+            <div class="call-to-action-desktop-view">View on GitHub</div>
+        </div>
+    </div>
+    <div id="related-tutorials" class="mt-4">
+      <h3> Related</h3>
+    </div>
   </div>
 </div>
 {% endif %}
+
