Add support for the QML repo

--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -18,6 +18,15 @@
     {% endtrans %}
   </p>
 
+  {% if not theme_toc_global %}
+  <style type="text/css">
+    .search-block {
+      margin-top: 30px;
+    }
+  </style>
+  {% include "searchbox.html" %}
+  {% endif %}
+
   {% if search_performed %}
     <h2>{{ _('Search Results') }}</h2>
   {% endif %}
