--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light white sticky-top">
 
   <!-- Logo and Title -->
+
+{% if theme_toc_global %}
   <a class="navbar-brand nav-link" href="{{ pathto(theme_navbar_home_link, 1) }}">
     <img class="pr-1" src=" {{ pathto(theme_navbar_logo_path, 1) }}" width="28px"></img>
     {% if theme_navbar_wordmark_path %}
@@ -9,6 +11,29 @@
       <h1 id="title">{{ theme_navbar_name }}</h1>
     {% endif %}
   </a>
+{% else %}
+<!-- Dropdown -->
+<li class="nav-item dropdown">
+    <a
+      class="navbar-brand nav-link dropdown-toggle"
+      href="{{ pathto(theme_navbar_home_link, 1) }}"
+      id="navbarDropdownMenuLink"
+      role="button"
+      data-mdb-toggle="dropdown"
+      aria-expanded="false"
+    >
+    <img class="pr-1" src=" {{ pathto(theme_navbar_logo_path, 1) }}" width="28px"></img>
+    {% if theme_navbar_wordmark_path %}
+      <img id="navbar-wordmark" src="{{ pathto(theme_navbar_wordmark_path, 1) }}"></img>
+    {% else %}
+      <h1 id="title">{{ theme_navbar_name }}</h1>
+    {% endif %}
+  </a>
+  <div class="sidebar-toc dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+    {{ toctree(maxdepth=1, collapse=True, includehidden=True) }}
+  </div>
+</li>
+{% endif %}
 
   <!-- [Mobile] Collapse Button -->
   <div class="row right">
@@ -50,6 +75,14 @@
           </a>
         </li>
       {% endfor %}
+      {% if not theme_toc_global %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ pathto('search.html', 1) }}">
+            <i class="fas fa-search pr-1"></i>
+          </a>
+        </li>
+      {% endif %}
+
     </ul>
   </div>
 
