--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -37,9 +37,11 @@
 
   <!-- [Mobile] Collapse Button -->
   <div class="row right">
+    {% if theme_toc_global %}
     <a href="#" class="btn navbar-toggler black-text mr-1 justify-content-center" id="mobile-toggle">
       <i class="fas fa-search"></i>
     </a>
+    {% endif %}
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
       aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
