added better support

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -1,37 +1,48 @@
 <nav class="navbar navbar-expand-lg navbar-light white sticky-top">
 
-  <!-- Logo and Title -->
+<!-- Logo and Title -->
+{%- macro wordmark() %}
+  <img class="pr-1" src=" {{ pathto(theme_navbar_logo_path, 1) }}" width="28px"></img>
+  {% if theme_navbar_wordmark_path %}
+    <img id="navbar-wordmark" src="{{ pathto(theme_navbar_wordmark_path, 1) }}"></img>
+  {% else %}
+    <h1 id="title">{{ theme_navbar_name }}</h1>
+  {% endif %}
+{%- endmacro %}
 
-{% if not toc_global and theme_navbar_left_links|length == 0 %}
-<!-- Dropdown -->
-<li class="nav-item dropdown">
-    <a
-      class="navbar-brand nav-link dropdown-toggle"
-      href="{{ pathto(theme_navbar_home_link, 1) }}"
-      id="navbarDropdownMenuLink"
-      role="button"
-      data-mdb-toggle="dropdown"
-      aria-expanded="false"
-    >
-    <img class="pr-1" src=" {{ pathto(theme_navbar_logo_path, 1) }}" width="28px"></img>
-    {% if theme_navbar_wordmark_path %}
-      <img id="navbar-wordmark" src="{{ pathto(theme_navbar_wordmark_path, 1) }}"></img>
-    {% else %}
-      <h1 id="title">{{ theme_navbar_name }}</h1>
-    {% endif %}
-  </a>
-  <div class="sidebar-toc dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-    {{ toctree(maxdepth=1, collapse=True, includehidden=True) }}
-  </div>
-</li>
+{% macro hover_toc(name, href, class="", active=False) %}
+  {# Creates a navbar entry that supports a hover-enabled ToC #}
+  <li class="nav-item dropdown {{ 'active' if active else '' }}">
+      <a
+        class="{{ class }} nav-link dropdown-toggle"
+        href="{{ href }}"
+        id="navbarDropdownMenuLink"
+        role="button"
+        data-mdb-toggle="dropdown"
+        aria-expanded="false"
+      >
+      {{ name }}
+    </a>
+    <div class="sidebar-toc dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      {{ toctree(maxdepth=1, collapse=True, includehidden=True) }}
+    </div>
+  </li>
+{% endmacro %}
+
+{# Determine whether or not to use the hover ToC #}
+{% set use_hover_toc = not theme_toc_global and theme_toc_hover %}
+
+{% if use_hover_toc and theme_navbar_left_links|length != 0 %}
+  {# Extract active navbar entries #}
+  {% set dropdown_link = theme_navbar_left_links|selectattr("active") | map(attribute="name") | list %}
+{% endif %}
+
+{% if use_hover_toc and dropdown_link|length == 0 %}
+  {# The project wordmark provides a hover TOC #}
+  {{ hover_toc(wordmark(), pathto(theme_navbar_home_link, 1), "navbar-brand") }}
 {% else %}
   <a class="navbar-brand nav-link" href="{{ pathto(theme_navbar_home_link, 1) }}">
-    <img class="pr-1" src=" {{ pathto(theme_navbar_logo_path, 1) }}" width="28px"></img>
-    {% if theme_navbar_wordmark_path %}
-      <img id="navbar-wordmark" src="{{ pathto(theme_navbar_wordmark_path, 1) }}"></img>
-    {% else %}
-      <h1 id="title">{{ theme_navbar_name }}</h1>
-    {% endif %}
+    {{ wordmark() }}
   </a>
 {% endif %}
 
@@ -56,25 +67,9 @@
     <ul class="navbar-nav mr-auto">
       {% for link in theme_navbar_left_links %}
         {% if link.active %}
-
-          {% if not theme_toc_global %}
-            <!-- Dropdown -->
-            <li class="nav-item dropdown active">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="{{ pathto(theme_navbar_home_link, 1) }}"
-                  id="navbarDropdownMenuLink"
-                  role="button"
-                  data-mdb-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  {{ link.name }}
-                </a>
-                <span class="sr-only">(current)</span>
-              <div class="sidebar-toc dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                {{ toctree(maxdepth=1, collapse=True, includehidden=True) }}
-              </div>
-            </li>
+          {% if link.name in dropdown_link %}
+            {# The active navbar link provides a hover TOC #}
+            {{ hover_toc(link.name, link.href, "", True) }}
           {% else %}
             <li class="nav-item active">
               <a class="nav-link" href="{{ pathto(link.href, 1) }}">{{ link.name }}</a>
@@ -99,13 +94,6 @@
           </a>
         </li>
       {% endfor %}
-      {% if not theme_toc_global %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ pathto('search.html', 1) }}">
-            <i class="fas fa-search pr-1"></i>
-          </a>
-        </li>
-      {% endif %}
 
     </ul>
   </div>
