--- a/xanadu_sphinx_theme/footer.html
+++ b/xanadu_sphinx_theme/footer.html
@@ -1,59 +1,33 @@
+{% set num_link_cols = theme_footer_links|length %}
+
 <footer class="page-footer text-md-left pt-4">
 
   <hr class="pb-0 mb-0">
   <div class="container-fluid">
     <div class="row justify-content-md-center">
 
-      <!-- Xanadu -->
-      <div class="col-md-3">
-        <h5 class="mb-1 footer-heading">Xanadu</h5>
-        <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
-        <p>
-          Located in the heart of downtown Toronto, we've brought together
-          exceptional minds from around the world to build quantum computers
-          that are useful and available to people everywhere.
-        </p>
-      </div>
-
-      <!-- PennyLane -->
-      <div class="col-md-2 col-4">
-        <h5 class="mb-1 footer-heading">PennyLane</h5>
-        <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
-        <ul class="list-unstyled">
-          <li><a href="https://pennylane.ai/">Home</a></li>
-          <li><a href="https://pennylane.readthedocs.io/">Documentation</a></li>
-          <li><a href="https://discuss.pennylane.ai/">Forum</a></li>
-          <li><a href="https://github.com/XanaduAI/pennylane">GitHub</a></li>
-          <li><a href="https://xanadu-quantum.slack.com/">Slack</a></li>
-          <li><a href="https://twitter.com/pennylaneai">Twitter</a></li>
-        </ul>
-      </div>
-
-      <!-- Strawberry Fields -->
-      <div class="col-md-2 col-4">
-        <h5 class=" mb-1 footer-heading">Strawberry Fields</h5>
-        <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
-        <ul class="list-unstyled">
-          <li><a href="https://strawberryfields.ai/">Home</a></li>
-          <li><a href="https://strawberryfields.readthedocs.io/">Documentation</a></li>
-          <li><a href="https://github.com/XanaduAI/strawberryfields">GitHub</a></li>
-          <li><a href="https://xanadu-quantum.slack.com/">Slack</a></li>
-        </ul>
-      </div>
-
+      {% if theme_footer_about %}
       <!-- About -->
+      <div class="{{ 'col-md-6 text-center' if theme_footer_links|length==0 else 'col-md-' + [12 - 2 * num_link_cols, 4] | min | string }}">
+        <h5 class="mb-1 footer-heading">{{ theme_footer_about.title }}</h5>
+        <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
+        <p>{{ theme_footer_about.description }}</p>
+      </div>
+      {% endif %}
+
+      <!-- Links -->
+      {% for column in theme_footer_links %}
       <div class="col-md-2 col-4">
-        <h5 class=" mb-1 footer-heading">About</h5>
+        <h5 class="mb-1 footer-heading">{{ column.title }}</h5>
         <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
         <ul class="list-unstyled">
-          <li><a href="https://xanadu.ai/">Home</a></li>
-          <li><a href="https://xanadu.ai/about">About</a></li>
-          <li><a href="https://xanadu.ai/hardware">Hardware</a></li>
-          <li><a href="https://xanadu.ai/research">Research</a></li>
-          <li><a href="https://xanadu.ai/cloud">Cloud</a></li>
-          <li><a href="https://medium.com/XanaduAI">Blog</a></li>
+          {% for link in column.links %}
+          <li><a href="{{ link.href }}">{{ link.name }}</a></li>
+          {% endfor %}
         </ul>
       </div>
+      {% endfor %}
+
     </div>
   </div>
   <hr>
@@ -61,21 +35,34 @@
   <!-- Social -->
   <div class="social-section text-center">
       <ul class="list-unstyled list-inline mb-0">
-          <li class="list-inline-item"><a class="btn-fb" href="https://www.facebook.com/Xanadu-1312050742230493/"><i class="fab fa-facebook-f"> </i></a></li>
-          <li class="list-inline-item"><a class="btn-tw" href="https://twitter.com/xanaduai"><i class="fab fa-twitter"> </i></a></li>
-          <li class="list-inline-item"><a href="https://medium.com/xanaduai"><i class="fab fa-medium-m"> </i></a></li>
-          <li class="list-inline-item"><a class="btn-li" href="https://www.linkedin.com/company/xanaduai/"><i class="fab fa-linkedin-in"> </i></a></li>
-          <li class="list-inline-item"><a class="btn-git" href="https://github.com/XanaduAI"><i class="fab fa-github"> </i></a></li>
+          {% for link in theme_footer_socials %}
+          <li class="list-inline-item"><a class="btn-git" href="{{ link.href }}"><i class="{{ link.icon }}"> </i></a></li>
+          {% endfor %}
       </ul>
-      <a href="https://xanadu.us17.list-manage.com/subscribe?u=725f07a1d1a4337416c3129fd&id=294b062630" style="font-size: initial;">
-        Stay updated with our newsletter
-      </a>
+      {% if theme_footer_tagline %}
+        {% if "href" in theme_footer_tagline %}
+        <a href="{{ theme_footer_tagline.href }}" style="font-size: initial;">
+          {{ theme_footer_tagline.text }}
+        </a>
+        {% else %}
+          <span class="footer-copyright" style="font-size: initial;">
+            {{ theme_footer_tagline.text }}
+          </span>
+        {% endif %}
+      {% endif %}
   </div>
 
   <!-- Copyright -->
   <div class="footer-copyright py-3 mt-0 text-center">
       <div class="container-fluid">
-        Copyright © 2022 Xanadu Quantum Technologies
+
+        {%- if show_copyright %}
+          {%- if hasdoc('copyright') %}
+            {% trans path=pathto('copyright'), copyright=copyright|e %}<a href="{{ path }}">Copyright</a> &copy; {{ copyright }}{% endtrans %}
+          {%- else %}
+            {% trans copyright=copyright|e %}Copyright &copy; {{ copyright }}{% endtrans %}
+          {%- endif %}
+        {%- endif %}
 
         {% for copyright in theme_extra_copyrights %}
           <br>
