--- a/xanadu_sphinx_theme/footer.html
+++ b/xanadu_sphinx_theme/footer.html
@@ -10,7 +10,7 @@
       <!-- About -->
       <div class="{{ 'col-md-6 text-center' if theme_footer_links|length==0 else 'col-md-' + [12 - 2 * num_link_cols, 4] | min | string }}">
         <h5 class="mb-1 footer-heading">{{ theme_footer_about.title }}</h5>
-        <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
+        <hr width=100px class="d-inline-block mt-0 mb-1 accent-4">
         <p>{{ theme_footer_about.description }}</p>
       </div>
       {% endif %}
@@ -19,7 +19,7 @@
       {% for column in theme_footer_links %}
       <div class="col-md-2 col-4">
         <h5 class="mb-1 footer-heading">{{ column.title }}</h5>
-        <hr width=100px class="d-inline-block mt-0 mb-1 Deep-purple accent-4">
+        <hr width=100px class="d-inline-block mt-0 mb-1 accent-4">
         <ul class="list-unstyled">
           {% for link in column.links %}
           <li><a href="{{ link.href }}">{{ link.name }}</a></li>
